complite mini e-commerce sit

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
              <div class="product">
                 <h2>I Phone 16 pro</h2>
                 <p>$999</p>
-                <button>Add to Cart</button>
+                <button class="add-to-card" data-name="I Phone 16 pro" data-price="999">Add to Cart</button>
              </div>
              <div class="product">
                 <h2>Galaxy S22</h2>
                 <p>$799</p>
-                <button>Add to Cart</button>
+                <button class="add-to-card" data-name="Galaxy S22" data-price="799">Add to Cart</button>
              </div>
              <div class="product">
                 <h2>Google Pixel 7</h2>
                 <p>$699</p>
-                <button>Add to Cart</button>
+                <button class="add-to-card" data-name="Google Pixel 7" data-price="699">Add to Cart</button>
              </div>
         </div>
         <h1>Shopping Cart</h1>
@@ -37,6 +37,8 @@
         </div>
     </div>
 
+
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
+
 </html>
